force-app/main/default/objects/Artifact__c/fields/Artifact_Factory__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Factory__c</fullName>
    <label>Artifact Factory</label>
    <referenceTo>Artifact_Factory__c</referenceTo>
    <relationshipLabel>Artifacts</relationshipLabel>
    <relationshipName>Artifacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>