force-app/main/default/objects/Artifact__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>