force-app/main/default/objects/Artifact__c/fields/With__c.field-meta.xml
<CustomField>
    <fullName>With__c</fullName>
    <label>With</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>